--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/031f70e06c.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/scripts.js" defer></script>
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-database.js"></script>
+    <script src="js/scripts.js"></script>
 </head>
 <body onload= Init()>
     <header>
@@ -68,8 +77,9 @@
         <div class='modal__cartClean'>
             <a  href="#" onclick="CartClean()">Vaciar carrito</a>
         </div>
-        <div class="close__buttonContainer">
-            <a class="close__button" href="#" onclick="ModalClose()">Seguir comprando</a>
+        <div class="modalFooter__buttonContainer">
+            <a class="modalFooter__button" href="#" onclick="ModalClose()">Seguir comprando</a>
+            <a class="modalFooter__button" href="#">Ir a pagar</a>
         </div>
 
         </div>
@@ -80,5 +90,8 @@
             
         </ul>
     </section>
+    
+
+
 </body>
 </html>
