--- a/sections/products-manager.html
+++ b/sections/products-manager.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aromarte - Administrador de Productos</title>
     <link rel="stylesheet" href="../estilos/main.css">
+    <script src="https://kit.fontawesome.com/031f70e06c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
     <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -19,19 +21,45 @@
     <script src="../js/prod-manager.js"></script>
 </head>
 <body>
-    <h1>Carga de inventario</h1>
-    <form >
-        <label for="input-name">Nombre del Producto</label>
-        <input id="input-name" type="text">
-        <label for="text-description">Descripción</label>
-        <textarea id="text-description"></textarea>
-        <label for="input-price">Precio</label>
-        <input id="input-price" type="text">
-        <label for="input-category">Categoría</label>
-        <input id="input-category" type="text">
-        <label for="input-image">URL de la imágen</label>
-        <input id="input-image" type="text">
-        <a href="#" onclick="CreateProduct()">Crear</a>
+    <header>
+        <a class="header__logOutButton" href="#" onclick="LogOut()">Cerrar sesión</a>
+        <div class="header__logo">
+            <a href="../index.html"><img src="../img/logo.jpg" alt="Logo" class="header__logoImg"></a>
+        </div>
+    </header>
+    <h1>Gestión de productos</h1>
+    <h2>Cargador de productos</h2>
+    <section class="onLog productManager__container">
+        <div class="productEntry">
+            <h3>Ingrese los datos</h3>
+    <form class="form__productCharger">
+        <label class="productCharger__label" for="input-name">Nombre del Producto</label>
+        <input class="productCharger__input" id="input-name" type="text">
+        <label class="productCharger__label" for="input-price">Precio</label>
+        <input class="productCharger__input" id="input-price" type="text">
+        <label class="productCharger__label" for="input-category">Categoría</label>
+        <input class="productCharger__input" id="input-category" type="text">
+        <label class="productCharger__label" for="input-image">URL de la imágen</label>
+        <input class="productCharger__input" id="input-image" type="text">
+        <label class="productCharger__label" for="text-description">Descripción</label>
+        <textarea class="productCharger__text" id="text-description" rows="10"></textarea>
+        <div class="productCharger__buttonContainer">
+            <a class="productCharger__button"  onclick="CreateProduct()">Agregar producto</a>
+            <a class="productCharger__button"  onclick="ProductPreview()">Previsualizar</a>
+        </div>
     </form>
+    </div>
+    <div class="productViewer">
+        <h3>Previsualización</h3>
+        <div class="preview__container">
+            <ul class="shop__list">
+
+            </ul>
+        </div>
+    </div>
+</section>
+<section class="noLog">
+    <h3>Por favor logueese de nuevo haciendo click <a href="../admin/index.html">>>>aquí<<<</a></h3>
+</section>
 </body>
 </html>
