--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aromarte - Administración</title>
+    <title>Aromarte | Administración</title>
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-auth.js"></script>
