Mejorado el estilo del checkout y algunas reformas menores

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
                     <a href="#">Productos</a>
                 </li>
                 <li class="nav__listItem">
-                    <a href="#">¿Qué es Zero Waste?</a>
-                </li>
-                <li class="nav__listItem">
                     <a href="sections/about-us.html">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav__listItem">
@@ -50,7 +47,7 @@
         </nav>
     </header>
     <section class="body__portada">
-        <img src="img/portada.jpg" alt="" class="body__portadaImg">
+        <img src="img/web1.png" alt="" class="body__portadaImg">
     </section>
     <section class="body__modal">
         <div class="modal__container">
@@ -111,7 +108,7 @@
                     <p class="gridCart__quantity-text">1</p>
                     <a id="Product-buttonUp" class="gridCart__quantity-button">+</a>
                 </div>
-                <a class="gridCart__button" href="#"><p id="gridCart__button-hidden"> <i class="fas fa-check-circle shop__cartAdd"></i> Agregado</p> <p id="gridCart__button-visible">Agregar al carrito</p> </a>
+                <a class="gridCart__button" href="#" id="buttonCheck"><p id="gridCart__button-hidden"> <i class="fas fa-check-circle shop__cartAdd"></i> Agregado</p> <p id="gridCart__button-visible">Agregar al carrito</p> </a>
                 <a class="gridCart__button" href="sections/cart-checkout.html">Ir a Pagar</a>
             </div>
         </div>
