--- a/sections/about-us.html
+++ b/sections/about-us.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aromarte | ¿Quiénes somos?</title>
     <link rel="stylesheet" href="../estilos/main.css">
+    <script src="https://kit.fontawesome.com/031f70e06c.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,13 +19,10 @@
                     <a href="../index.html">Principal</a>
                 </li>
                 <li class="nav__listItem">
-                    <a href="about-us.html">Productos</a>
+                    <a href="#">Productos</a>
                 </li>
                 <li class="nav__listItem">
-                    <a href="#">¿Qué es Zero Waste?</a>
-                </li>
-                <li class="nav__listItem">
-                    <a href="#">¿Quiénes Somos?</a>
+                    <a href="about-us.html">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav__listItem">
                     <a href="#">Contacto</a>
@@ -31,18 +30,18 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section class="section__aboutUs">
         <h1>¿Quiénes sómos?</h1>
-        <p>
+        <p class="aboutUs__text">
             Somos madre e hija emprendiendo juntas. Este proyecto surgió con la idea de tratarnos a nosotros mismos y al medio ambiente de una manera más amorosa, dejando de lado los mensajes violentos que brindan generalmente las grandes marcas de cosméticos. Brindamos productos naturales, respetuosos con nuestro cuerpo así como también con el medio ambiente.
         </p>
-        <p>
+        <p class="aboutUs__text">
             Comenzamos ofreciendo una línea de shampoo y jabones sólidos, sin parabenos ni envases plásticos (que generan cientos de miles de toneladas de desechos innecesarios que luego de ser tirados a la basura demoran siglos en degradarse). Con el tiempo fuimos agregando más productos, como velas de cera de soja, productos de cosmética natural, que al entregarse en envases reutilizables ofrecemos el servicio de re-fill (rellenado) para disminuir drásticamente los desechos plásticos y ponemos nuestro granito de arena para un mundo más sustentable.
         </p>
-        <p>
+        <p class="aboutUs__text">
             Nuestra meta es mantenernos en constante innovación, ofreciendo productos de excelencia para tu cuidado, como siempre libre de químicos nocivos para nuestra salud, sin dejar de lado nuestro compromiso con el cuidado de nuestro medio ambiente.
         </p>
-        <p>
+        <p class="aboutUs__text">
             ¡Esperamos les guste esta propuesta tanto como a nosotras!♥
         </p>
     </section>
