Finalizada la sección checkout, se comenzó a crear finish y el administrador de pedidos

--- a/admin/index.html
+++ b/admin/index.html
@@ -35,7 +35,7 @@
         <div class="admin__options">
             <h3>Seleccione la acción que desea realizar:</h3>
             <ul class="admin__taskList">
-                <li class="admin__taskItem"><a class="linkButton" href="../sections/products-manager.html">Gestión de productos</a></li>
+                <li class="admin__taskItem"><a class="linkButton" href="../admin/products-manager.html">Gestión de productos</a></li>
                 <li class="admin__taskItem"><a class="linkButton" href="">Gestión de pedidos (Proximamente...)</a></li>
                 <li class="admin__taskItem"><a class="linkButton" href="#">Gestión de cuentas (Proximamente...)</a></li>
                 <li class="admin__taskItem"><a class="linkButton" href="#">Facturación (Proximamente...)</a></li>
