--- a/admin/products-manager.html
+++ b/admin/products-manager.html
@@ -109,7 +109,7 @@
     </div>
 </section>
 <section class="noLog">
-    <h3>Por favor logueese de nuevo haciendo click <a href="../admin/index.html">>>>aquí<<<</a></h3>
+    <h3>Por favor logueese de nuevo haciendo click <a href="index.html">>>>aquí<<<</a></h3>
 </section>
 </body>
 </html>
