--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <a id="Product-buttonUp" class="gridCart__quantity-button">+</a>
                 </div>
                 <a class="gridCart__button" href="#" id="buttonCheck"><p id="gridCart__button-hidden"> <i class="fas fa-check-circle shop__cartAdd"></i> Agregado</p> <p id="gridCart__button-visible">Agregar al carrito</p> </a>
-                <a class="gridCart__button" href="sections/cart-checkout.html">Ir a Pagar</a>
+                <a class="gridCart__button" id="buttonModal-checkout" href="sections/cart-checkout.html">Ir a Pagar</a>
             </div>
         </div>
         </div>
