--- a/sections/cart-checkout.html
+++ b/sections/cart-checkout.html
@@ -9,6 +9,11 @@
     <script src="https://kit.fontawesome.com/031f70e06c.js" crossorigin="anonymous"></script>         
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-app.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-analytics.js"></script>
     <script src="../js/checkout.js"></script>
 </head>
 <body onload=Init()>
@@ -25,53 +30,61 @@
         <form class="checkout__userForm">
             <div class="customer__names">
                 <div class="checkout__inputColumn">
-                    <label for="customer__name">Apellido</label>
+                    <label for="customer__lastName">Apellido</label>
                     <input type="text" id="customer__lastName" class="customer__inputLastName">
+                    <p class="input-null" id="customer-lastName-alert"></p>
                 </div>
                 <div class="checkout__inputColumn">
                     <label for="customer__name">Nombre</label>
                     <input type="text" id="customer__name" class="customer__inputName">
+                    <p class="input-null" id="customer-name-alert"></p>
                 </div>
             </div>
             <div class="customer__mailPhone">
                 <div class="checkout__inputColumn">
                     <label for="customer__email">Correo Electrónico</label>
                     <input type="email" id="customer__email" class="customer__inputEmail">
+                    <p class="input-null" id="customer-email-alert"></p>
                 </div>
                 <div class="checkout__inputColumn">
                     <label for="customer__phone">Teléfono</label>
                     <input type="tel" id="customer__phone" class="customer__inputPhone">
+                    <p class="input-null" id="customer-phone-alert"></p>
                 </div>
             </div>
             <div class="customer__address">
                 <div class="checkout__inputColumn">
                     <label for="customer__address">Dirección</label>
                     <input type="text" id="customer__address" class="customer__inputAddress">
+                    <p class="input-null" id="customer-address-alert"></p>
                 </div>
                 <div class="checkout__inputColumn">
                     <label for="customer__addressZip">Código Postal</label>
                     <input type="text" id="customer__addressZip" class="customer__inputZip">
+                    <p class="input-null" id="customer-zip-alert"></p>
                 </div>
             </div>
             <div class="customer__city">
                 <div class="checkout__inputColumn">
                     <label for="customer__addressCity">Ciudad</label>
                     <input type="text" id="customer__addressCity" class="customer__inputCity">
+                    <p class="input-null" id="customer-city-alert"></p>
                 </div>
                 <div class="checkout__inputColumn">
                     <label for="customer__addressState">Provincia</label>
                     <input type="text" id="customer__addressState" class="customer__inputState">
+                    <p class="input-null" id="customer-state-alert"></p>
                 </div>
             </div>
             <div class="customer__observations">
-                <label for="">Comentarios:</label>
-                <textarea name="" id=""  rows="5" class="customer__inputObservations">
-                </textarea>
+                <label for="customer__observations">Comentarios:</label>
+                <textarea maxlength="100"id="customer__observations"rows="5" class="customer__inputObservations"></textarea>
+                <p class="input-null" id="customer-observations-alert"></p>
             </div>
         </form>
         <div class="checkout__buttonsContainer">
             <a class="checkout__button" href="../index.html">Volver a la tienda</a>
-            <a class="checkout__button" onclick="BuyClick()" href="">Comprar</a>
+            <a class="checkout__button" id="checkout__buyButton" onclick="BuyClick()" >Comprar</a>
         </div>
         </div>
         <div class="checkout-products">
@@ -110,28 +123,28 @@
                     <h3>Seleccione forma de entrega:</h3>
                     <form class="checkout__deliverForm" action="">
                         <div>
-                            <input type="radio" id="deliver-takeAway" name="deliver__method" value="takeAway">
+                            <input onclick="DeliverSelect('takeAway')" type="radio" id="deliver-takeAway" name="deliver__method" value="takeAway">
                             <label for="deliver-takeAway">Retiro personalmente</label>
                         </div>
                         <div>
-                            <input type="radio" id="deliver-delivery" name="deliver__method" value="delivery">
+                            <input onclick="DeliverSelect('delivery')" type="radio" id="deliver-delivery" name="deliver__method" value="delivery">
                             <label for="deliver-delivery">Envío por cadete</label>
                         </div>
                         <div>
-                            <input type="radio" id="deliver-freeDelivery" name="deliver__method" value="freeDelivery">
+                            <input onclick="DeliverSelect('freeDelivery')" type="radio" id="deliver-freeDelivery" name="deliver__method" value="freeDelivery">
                             <label for="deliver-freeDelivery">Envío gratis (sólo zona centro)</label>
                         </div>
                     </form>
                 </div>
                 <div class="checkout__payments">
                     <h3>Seleccione forma de pago:</h3>
-                    <form action="">
+                    <form action="" id="checkout__paymentForm">
                         <div>
-                            <input type="radio" id="payment-cash" name="payment__method" value="cash">
+                            <input type="radio" id="payment-cash" onclick="PaymentSelect('cash')" name="payment__method" value="cash">
                             <label for="payment-cash">Contado/Efectivo</label>
                         </div>
                         <div>
-                            <input type="radio" id="payment-mp" name="payment__method" value="mercadopago">
+                            <input type="radio" id="payment-mp" onclick="PaymentSelect('mercadopago')" name="payment__method" value="mercadopago">
                             <label for="payment-mp">MercadoPago</label>
                         </div>
                     </form>
