se terminó de agregar funcionalidades, comienzo del responsive

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             </ul>
         </div>
         <div class="shop__filterContainer">
-            <p>Mostrar:</p>
+            <p class="shop__filterTitle">Mostrar:</p>
             <form class="shop__filter" id="shop__filter">
-                <div>
+                <div class="filter__item">
                     <input type="checkbox" id="filter-all" name="filter" class="input__filter" value="todo" onchange="CheckboxSelect('all')" checked>
                     <label for="filter-all">Todo</label>
                 </div>
