--- a/admin/index.html
+++ b/admin/index.html
@@ -35,8 +35,8 @@
         <div class="admin__options">
             <h3>Seleccione la acción que desea realizar:</h3>
             <ul class="admin__taskList">
-                <li class="admin__taskItem"><a class="linkButton" href="../admin/products-manager.html">Gestión de productos</a></li>
-                <li class="admin__taskItem"><a class="linkButton" href="">Gestión de pedidos (Proximamente...)</a></li>
+                <li class="admin__taskItem"><a class="linkButton" href="products-manager.html">Gestión de productos</a></li>
+                <li class="admin__taskItem"><a class="linkButton" href="orders-manager.html">Gestión de pedidos</a></li>
                 <li class="admin__taskItem"><a class="linkButton" href="#">Gestión de cuentas (Proximamente...)</a></li>
                 <li class="admin__taskItem"><a class="linkButton" href="#">Facturación (Proximamente...)</a></li>
             </ul>
