versión final de entrega, faltan algunas funciones

--- a/admin/orders-manager.html
+++ b/admin/orders-manager.html
@@ -21,15 +21,16 @@
             <a href="../index.html"><img src="../img/logo.jpg" alt="Logo" class="header__logoImg"></a>
         </div>
     </header>
+    <a class="adminGoBack"href="index.html"><-Volver al administrador</a>
+
     <h1>Gestión de productos</h1>
     <h2>Administrador de pedidos</h2>
-
     <section class="onLog">
         <div class="orders__container">
             <h3>Pedidos:</h3>
             <div class="orders__ListContainer">
                 <ul id="orders-names" class="orders__UL">
-                    <li class="orders__ListTitle">Apellido y nombre:</li>
+                    <li class="orders__ListTitle">Cliente:</li>
                 </ul>
                 <ul id="orders-address" class="orders__UL">
                     <li class="orders__ListTitle">Domicilio</li>
