--- a/admin/products-manager.html
+++ b/admin/products-manager.html
@@ -28,8 +28,10 @@
             <a href="../index.html"><img src="../img/logo.jpg" alt="Logo" class="header__logoImg"></a>
         </div>
     </header>
+    <a class="adminGoBack"href="index.html"><-Volver al administrador</a>
     <h1>Gestión de productos</h1>
     <h2>Cargador de productos</h2>
+    
     <section id="body__alert" class="body__alert">
         <div class="alert__container">
         <div class="modal__headerContainer">
