--- a/sections/contact.html
+++ b/sections/contact.html
@@ -29,24 +29,26 @@
             </ul>
         </nav>
     </header>
-    <h1>¿Quiénes sómos?</h1>
-    <section class="section__aboutUs">
-        <p class="aboutUs__text">
-            Somos madre e hija emprendiendo juntas. Este proyecto surgió con la idea de tratarnos a nosotros mismos y al medio ambiente de una manera más amorosa, dejando de lado los mensajes violentos que brindan generalmente las grandes marcas de cosméticos. Brindamos productos naturales, respetuosos con nuestro cuerpo así como también con el medio ambiente.
-        </p>
-        <p class="aboutUs__text">
-            Comenzamos ofreciendo una línea de shampoo y jabones sólidos, sin parabenos ni envases plásticos (que generan cientos de miles de toneladas de desechos innecesarios que luego de ser tirados a la basura demoran siglos en degradarse). Con el tiempo fuimos agregando más productos, como velas de cera de soja, productos de cosmética natural, que al entregarse en envases reutilizables ofrecemos el servicio de re-fill (rellenado) para disminuir drásticamente los desechos plásticos y ponemos nuestro granito de arena para un mundo más sustentable.
-        </p>
-        <p class="aboutUs__text">
-            Nuestra meta es mantenernos en constante innovación, ofreciendo productos de excelencia para tu cuidado, como siempre libre de químicos nocivos para nuestra salud, sin dejar de lado nuestro compromiso con el cuidado de nuestro medio ambiente.
-        </p>
-        <p class="aboutUs__text">
-            ¡Esperamos les guste esta propuesta tanto como a nosotras!♥
-        </p>
+    <h1>Contacto</h1>
+    <section class="contact__section">
+        <h3 class="contact__contact-title">Encontranos en:</h3>
+        <div class="contact__container">
+            <div class="contact__contact contact__div">
+                
+                <p class="contact__contact-text">Aromarte | Tienda Natural</p>
+                <p class="contact__contact-text"><a href="../index.html">www.aromarte.com.ar</a></p>
+                <p class="contact__contact-text"><a class="contact__contact-anchor" href="mailto:aromarterosario@gmail.com">aromarterosario@gmail.com</a></p>
+                <p class="contact__contact-text"><a class="contact__contact-anchor" href="https://api.whatsapp.com/send?phone=5493416231799">(+54) 3416231799 <i class="fab fa-whatsapp-square contact-wapp-icon"></i></a></p>
+                <p class="contact__contact-text"><a class="contact__contact-anchor" href="https://api.whatsapp.com/send?phone=5493415026968">(+54) 3415026968 <i class="fab fa-whatsapp-square contact-wapp-icon"></i></a></p>
+            </div>
+            <div class="contact__div">
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Faromarteok&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
+            <div class="contact__div">
+                <iframe src="https://www.instagram.com/p/CIzNO6hIYRZ/embed" width="300" height="500" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+            </div>
+        </div>
     </section>
-    
-
-
     <footer class="main__footer">
         <div class="footer__container">
         <div class="footer__contact">
@@ -67,5 +69,6 @@
     </div>
     <p class="footer__copyright">Copyright © 2020 Aromarte | Desarrollado por E-GALARDI SOLUTIONS</p>
     </footer>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v8.0" nonce="aWiQSwnm"></script>
 </body>
 </html>
