--- a/admin/orders-manager.html
+++ b/admin/orders-manager.html
@@ -118,7 +118,7 @@
                             <li>Cantidad</li>
                         </ul>
                         <ul id="order-productPricePerUnit">
-                            <li>Precio x Unidad</li>
+                            <li>$ x Unidad</li>
                         </ul>
 
                     </div>
